fixed accordion and tabs buttons default text align

--- a/gutenberg/blocks/accordion/styles/style.scss
+++ b/gutenberg/blocks/accordion/styles/style.scss
@@ -25,6 +25,7 @@
 		font: inherit;
 		line-height: inherit;
 		align-items: center;
+		text-align: left;
 		padding: var(--gkt-accordion--heading__padding-v) var(--gkt-accordion--heading__padding-h);
 		color: inherit;
 		background-color: transparent;
