--- a/gutenberg/blocks/tabs/styles/style.scss
+++ b/gutenberg/blocks/tabs/styles/style.scss
@@ -42,6 +42,7 @@
 		color: inherit;
 		text-decoration: none;
 		background-color: transparent;
+		text-align: left;
 		border: var(--gkt-tabs--button__border-width) solid transparent;
 		border-top-left-radius: var(--gkt-tabs--button__border-radius);
 		border-top-right-radius: var(--gkt-tabs--button__border-radius);
